--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,10 +31,11 @@ PROJECT(trends_pi)
 
 SET(PACKAGE_NAME trends_pi)
 SET(PLUGIN_SOURCE_DIR .)
+MESSAGE (STATUS "")
 MESSAGE (STATUS "*** Staging to build ${PACKAGE_NAME} ***")
 
 #SET(CMAKE_BUILD_TYPE Debug)
-#SET(CMAKE_VERBOSE_MAKEFILE ON)
+SET(PREFIX_PARENTDATA ${PREFIX_DATA}/${PARENT})
 
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/src)
 
@@ -59,13 +60,7 @@ IF(WIN32)
     ADD_DEFINITIONS(-D_CRT_NONSTDC_NO_DEPRECATE -D_CRT_SECURE_NO_DEPRECATE)
 ENDIF(WIN32)
 
-IF(NOT DEFINED wxWidgets_USE_FILE)
-  SET(wxWidgets_USE_LIBS base core net xml html adv)
-  SET(BUILD_SHARED_LIBS TRUE)
-  FIND_PACKAGE(wxWidgets REQUIRED)
-ENDIF(NOT DEFINED wxWidgets_USE_FILE)
-
-  INCLUDE(${wxWidgets_USE_FILE})
+INCLUDE(${wxWidgets_USE_FILE})
 
 FIND_PACKAGE(Gettext REQUIRED)
 
@@ -74,8 +69,18 @@ FIND_PACKAGE(Gettext REQUIRED)
 
 
 SET(SRC_TRENDS
-            src/trends_pi.h
+            src/TrendsOverlayFactory.cpp
+            src/TrendsOverlayFactory.h
             src/trends_pi.cpp
+            src/trends_pi.h
+            src/TrendsUI.cpp
+            src/TrendsUI.h
+            src/TrendsDialog.cpp
+            src/TrendsDialog.h
+            src/TrendsConfigDialog.cpp
+            src/TrendsConfigDialog.h
+            src/icons.cpp
+            src/icons.h
 )
 ADD_LIBRARY(${PACKAGE_NAME} SHARED ${SRC_TRENDS})
 
@@ -87,80 +92,20 @@ ENDIF(WIN32)
 
 TARGET_LINK_LIBRARIES( ${PACKAGE_NAME} ${wxWidgets_LIBRARIES} )
 
+IF(APPLE)
+      INSTALL(TARGETS ${PACKAGE_NAME} BUNDLE LIBRARY DESTINATION ${CMAKE_BINARY_DIR}/OpenCPN.app/Contents/PlugIns)
+ENDIF(APPLE)
+
+IF(UNIX AND NOT APPLE)
+INSTALL(TARGETS ${PACKAGE_NAME} RUNTIME LIBRARY DESTINATION ${PREFIX_PLUGINS})
+ENDIF(UNIX AND NOT APPLE)
+
 IF(WIN32)
 INSTALL(TARGETS ${PACKAGE_NAME} RUNTIME DESTINATION "plugins")
 ENDIF(WIN32)
  	  	 
-# find src/ -name \*.cpp -or -name \*.c -or -name \*.h -or -name \*.hpp >po/POTFILES.in
-FIND_PROGRAM(GETTEXT_XGETTEXT_EXECUTABLE xgettext)
-IF (GETTEXT_XGETTEXT_EXECUTABLE)
-ADD_CUSTOM_COMMAND(
-   OUTPUT po/${PACKAGE_NAME}.pot.dummy
-   COMMAND ${GETTEXT_XGETTEXT_EXECUTABLE} --force-po --package-name=${PACKAGE_NAME} --package-version="${PACKAGE_VERSION}" --output=po/${PACKAGE_NAME}.pot  --keyword=_ --width=80 --files-from=${CMAKE_CURRENT_SOURCE_DIR}/po/POTFILES.in
-   DEPENDS po/POTFILES.in po/${PACKAGE_NAME}.pot
-   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-   COMMENT "trends-pot-update [${PACKAGE_NAME}]: Generated pot file."
-)
-ADD_CUSTOM_TARGET(trends-pot-update COMMENT "trends-pot-update: Done." DEPENDS po/${PACKAGE_NAME}.pot.dummy)
-
-ENDIF(GETTEXT_XGETTEXT_EXECUTABLE )
-
-MACRO(GETTEXT_UPDATE_PO _potFile)
-   SET(_poFiles ${_potFile})
-   GET_FILENAME_COMPONENT(_absPotFile ${_potFile} ABSOLUTE)
-
-   FOREACH (_currentPoFile ${ARGN})
-      GET_FILENAME_COMPONENT(_absFile ${_currentPoFile} ABSOLUTE)
-      GET_FILENAME_COMPONENT(_poBasename ${_absFile} NAME_WE)
-
-      ADD_CUSTOM_COMMAND(
-         OUTPUT ${_absFile}.dummy
-         COMMAND ${GETTEXT_MSGMERGE_EXECUTABLE} --width=80 --strict --quiet --update --backup=none --no-location -s ${_absFile} ${_absPotFile}
-         DEPENDS ${_absPotFile} ${_absFile}
-         COMMENT "trends-po-update [${_poBasename}]: Updated po file."
-      )
-
-      SET(_poFiles ${_poFiles} ${_absFile}.dummy)
-
-   ENDFOREACH (_currentPoFile )
-
-   ADD_CUSTOM_TARGET(trends-po-update COMMENT "trends-po-update: Done." DEPENDS ${_poFiles})
-ENDMACRO(GETTEXT_UPDATE_PO)
-
-IF (GETTEXT_MSGMERGE_EXECUTABLE)
-FILE(GLOB PACKAGE_PO_FILES po/*.po)
-GETTEXT_UPDATE_PO(po/${PACKAGE_NAME}.pot ${PACKAGE_PO_FILES})
-ENDIF(GETTEXT_MSGMERGE_EXECUTABLE)
-
-SET(_gmoFiles)
-MACRO(GETTEXT_BUILD_MO)
-   FOREACH (_poFile ${ARGN})
-      GET_FILENAME_COMPONENT(_absFile ${_poFile} ABSOLUTE)
-      GET_FILENAME_COMPONENT(_poBasename ${_absFile} NAME_WE)
-      SET(_gmoFile ${CMAKE_CURRENT_BINARY_DIR}/${_poBasename}.mo)
-
-      ADD_CUSTOM_COMMAND(
-         OUTPUT ${_gmoFile}
-         COMMAND ${GETTEXT_MSGFMT_EXECUTABLE} --check -o ${_gmoFile} ${_absFile}
-         DEPENDS ${_absFile}
-         COMMENT "trends-i18n [${_poBasename}]: Created mo file."
-      )
-
-IF(APPLE)
-      INSTALL(FILES ${_gmoFile} DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/OpenCPN.app/Contents/Resources/${_poBasename}.lproj RENAME opencpn-${PACKAGE_NAME}.mo )
-ELSE(APPLE)
-      INSTALL(FILES ${_gmoFile} DESTINATION ${PREFIX_DATA}/locale/${_poBasename}/LC_MESSAGES RENAME opencpn-${PACKAGE_NAME}.mo )
-ENDIF(APPLE)
-
-      SET(_gmoFiles ${_gmoFiles} ${_gmoFile})
-   ENDFOREACH (_poFile )
-ENDMACRO(GETTEXT_BUILD_MO)
-
-if(GETTEXT_MSGFMT_EXECUTABLE)
-   FILE(GLOB PACKAGE_PO_FILES po/*.po)
-   GETTEXT_BUILD_MO(${PACKAGE_PO_FILES})
-   ADD_CUSTOM_TARGET(trends-i18n COMMENT "trends-i18n: Done." DEPENDS ${_gmoFiles})
-   #ADD_DEPENDENCIES(trends-i18n ${PACKAGE_PO_FILES})
-   ADD_DEPENDENCIES(${PACKAGE_NAME} trends-i18n)
-ENDIF(GETTEXT_MSGFMT_EXECUTABLE)
-
+IF(WIN32)
+  INSTALL(DIRECTORY data DESTINATION "plugins\\\\trends")
+ELSE(WIN32)
+  INSTALL(DIRECTORY data DESTINATION ${PREFIX_PARENTDATA}/plugins/trends)
+ENDIF(WIN32)
