improve data handling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,7 +93,7 @@ SET(SRC_CLIMATOLOGY
 ADD_LIBRARY(${PACKAGE_NAME} SHARED ${SRC_CLIMATOLOGY})
 
 IF(NOT UNIX)
-    SET(SRC_BZIP
+    SET(SRC_BZIP_CLIM
             src/bzip2/bzlib.c 
             src/bzip2/blocksort.c 
             src/bzip2/compress.c 
@@ -102,7 +102,7 @@ IF(NOT UNIX)
             src/bzip2/huffman.c 
             src/bzip2/randtable.c
     )
-    ADD_LIBRARY(LIB_BZIP ${SRC_BZIP})
+    ADD_LIBRARY(LIB_BZIP_CLIM ${SRC_BZIP_CLIM})
 
     INCLUDE_DIRECTORIES(${PLUGIN_SOURCE_DIR}/src/zlib-1.2.3)
     INCLUDE_DIRECTORIES(${PLUGIN_SOURCE_DIR}/src/bzip2)
@@ -110,7 +110,7 @@ ENDIF(NOT UNIX)
 
 IF(WIN32)
   SET(OPENCPN_IMPORT_LIB "../../${CMAKE_CFG_INTDIR}/${PARENT}")
-  TARGET_LINK_LIBRARIES( ${PACKAGE_NAME} LIB_BZIP ${OPENCPN_IMPORT_LIB} )
+  TARGET_LINK_LIBRARIES( ${PACKAGE_NAME} LIB_BZIP_CLIM ${OPENCPN_IMPORT_LIB} )
   ADD_DEPENDENCIES(${PACKAGE_NAME} ${PARENT})
 ENDIF(WIN32)
 
