--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,11 +121,16 @@ IF(APPLE)
 ENDIF(APPLE)
 
 IF(UNIX AND NOT APPLE)
-INSTALL(TARGETS ${PACKAGE_NAME} RUNTIME LIBRARY DESTINATION ${PREFIX_PLUGINS})
+  FIND_PACKAGE(BZip2 REQUIRED)
+  INCLUDE_DIRECTORIES(${BZIP2_INCLUDE_DIR})
+  FIND_PACKAGE(ZLIB REQUIRED)
+  INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
+  TARGET_LINK_LIBRARIES( ${PACKAGE_NAME} ${BZIP2_LIBRARIES} ${ZLIB_LIBRARY} )
+  INSTALL(TARGETS ${PACKAGE_NAME} RUNTIME LIBRARY DESTINATION ${PREFIX_PLUGINS})
 ENDIF(UNIX AND NOT APPLE)
 
 IF(WIN32)
-INSTALL(TARGETS ${PACKAGE_NAME} RUNTIME DESTINATION "plugins")
+  INSTALL(TARGETS ${PACKAGE_NAME} RUNTIME DESTINATION "plugins")
 ENDIF(WIN32)
  	  	 
 IF(WIN32)
