--- a/gendata/Makefile.in
+++ b/gendata/Makefile.in
@@ -9,7 +9,7 @@ ALL_CURRENT += $(DATA)/current04.gz $(DATA)/current05.gz $(DATA)/current06.gz
 ALL_CURRENT += $(DATA)/current07.gz $(DATA)/current08.gz $(DATA)/current09.gz
 ALL_CURRENT += $(DATA)/current10.gz $(DATA)/current11.gz $(DATA)/current12.gz
 
-ALL_OTHER = $(DATA)/sealevelpressure.gz $(DATA)/seasurfacetemperature.gz $(DATA)/airsealeveltemperature.gz $(DATA)/cloud.gz $(DATA)/precipitation.gz $(DATA)/seadepth.gz
+ALL_OTHER = $(DATA)/sealevelpressure.gz $(DATA)/seasurfacetemperature.gz $(DATA)/airsealeveltemperature.gz $(DATA)/cloud.gz $(DATA)/precipitation.gz $(DATA)/relativehumidity.gz $(DATA)/seadepth.gz
 ALL_CYCLONE = $(DATA)/cyclone-atl $(DATA)/cyclone-bio $(DATA)/cyclone-bsh $(DATA)/cyclone-bwp $(DATA)/cyclone-epa $(DATA)/cyclone-she $(DATA)/cyclone-spa
 ALL = $(ALL_WIND) $(ALL_CURRENT) $(ALL_OTHER) $(ALL_CYCLONE)
 
@@ -113,6 +113,15 @@ precip.mon.mean.nc:
 
 genprecipdata: genprecipdata.cpp
 	g++ -o genprecipdata genprecipdata.cpp -lnetcdf -lnetcdf_c++ -g
+
+$(DATA)/relativehumidity.gz: rhum.mean.nc genrelativehumiditydata
+	./genrelativehumiditydata | gzip > $@
+
+rhum.mean.nc:
+	wget -c ftp://ftp.cdc.noaa.gov/Datasets/icoads/1degree/global/enh/rhum.mean.nc
+
+genrelativehumiditydata: genrelativehumiditydata.cpp
+	g++ -o genrelativehumiditydata genrelativehumiditydata.cpp -lnetcdf -lnetcdf_c++ -g
 
 $(DATA)/seadepth.gz: landseadepth.nc genseadepthdata
 	./genseadepthdata | gzip > $@
