--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,16 +1,12 @@
-src/climatology_pi.h
-src/zuFile.cpp
 src/ClimatologyConfigDialog.cpp
-src/ClimatologyUI.h
-src/climatology_pi.cpp
-src/ClimatologyUI.cpp
-src/zuFile.h
 src/ClimatologyConfigDialog.h
 src/ClimatologyDialog.cpp
-src/icons.h
-src/IsoLine.h
 src/ClimatologyDialog.h
-src/ClimatologyOverlayFactory.h
 src/ClimatologyOverlayFactory.cpp
-src/IsoLine.cpp
-src/icons.cpp
+src/ClimatologyOverlayFactory.h
+src/ClimatologyUI.cpp
+src/ClimatologyUI.h
+src/IsoBarMap.cpp
+src/IsoBarMap.h
+src/climatology_pi.cpp
+src/climatology_pi.h
