--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,94 +1,36 @@
 ##---------------------------------------------------------------------------
 ## Author:      Sean D'Epagnier
-##***************************************************************************
-## *   Copyright (C) 2013 by Sean D'Epagnierer                               *
-## *   This program is free software; you can redistribute it and/or modify  *
-## *   it under the terms of the GNU General Public License as published by  *
-## *   the Free Software Foundation; either version 3 of the License, or     *
-## *   (at your option) any later version.                                   *
-## *                                                                         *
-## *   This program is distributed in the hope that it will be useful,       *
-## *   but WITHOUT ANY WARRANTY; without even the implied warranty of        *
-## *   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         *
-## *   GNU General Public License for more details.                          *
-## *                                                                         *
-## *   You should have received a copy of the GNU General Public License     *
-## *   along with this program; if not, write to the                         *
-## *   Free Software Foundation, Inc.,                                       *
-## *   51 Franklin Street, Fifth Floor, Boston, MA 02110-1301,  USA.             *
-## ***************************************************************************
+## Copyright:   
+## License:     GPLv3+
+##---------------------------------------------------------------------------
 
 # define minimum cmake version
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)
-# This should be 2.8.0 to have FindGTK2 module
-IF (COMMAND cmake_policy)
-  CMAKE_POLICY(SET CMP0003 OLD)
-  CMAKE_POLICY(SET CMP0005 OLD)
-  CMAKE_POLICY(SET CMP0011 OLD)
-ENDIF (COMMAND cmake_policy)
 
 PROJECT(climatology_pi)
-
 SET(PACKAGE_NAME climatology_pi)
 SET(PLUGIN_SOURCE_DIR .)
 MESSAGE (STATUS "")
 MESSAGE (STATUS "*** Staging to build ${PACKAGE_NAME} ***")
 
-#SET(CMAKE_BUILD_TYPE Debug)
-SET(PREFIX_PARENTDATA ${PREFIX_DATA}/${PARENT})
+SET(VERSION_MAJOR "0")
+SET(VERSION_MINOR "6")
 
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/src)
-
-# require proper c++
-#ADD_DEFINITIONS( "-Wall -ansi -pedantic -Wno-variadic-macros" )
-#TODO: Should we use  -fno-stack-protector
-#  IF NOT DEBUGGING CFLAGS="-O2 -march=native"
-IF(NOT WIN32)
- ADD_DEFINITIONS( "-Wall -O2 -fexceptions -fvisibility=hidden" )
-
- IF(NOT APPLE)
-  SET(CMAKE_SHARED_LINKER_FLAGS "-Wl,-Bsymbolic")
- ELSE(NOT APPLE)
-  SET(CMAKE_SHARED_LINKER_FLAGS "-Wl -undefined dynamic_lookup")
- ENDIF(NOT APPLE)
-
-ENDIF(NOT WIN32)
-
-# Add some definitions to satisfy MS
-IF(WIN32)
-    ADD_DEFINITIONS(-D__MSVC__)
-    ADD_DEFINITIONS(-D_CRT_NONSTDC_NO_DEPRECATE -D_CRT_SECURE_NO_DEPRECATE)
-ENDIF(WIN32)
-
-INCLUDE(${wxWidgets_USE_FILE})
-
-FIND_PACKAGE(Gettext REQUIRED)
-
-# For convenience we define the sources as a variable. You can add 
-# header files and cpp/c files and CMake will sort them out
-
+INCLUDE("cmake/PluginConfigure.cmake")
 
 SET(SRC_CLIMATOLOGY
             src/ClimatologyOverlayFactory.cpp
-            src/ClimatologyOverlayFactory.h
             src/climatology_pi.cpp
-            src/climatology_pi.h
             src/ClimatologyUI.cpp
-            src/ClimatologyUI.h
             src/ClimatologyDialog.cpp
-            src/ClimatologyDialog.h
             src/ClimatologyConfigDialog.cpp
-            src/ClimatologyConfigDialog.h
             src/zuFile.cpp
-            src/zuFile.h
             src/IsoBarMap.cpp
-            src/IsoBarMap.h
             src/icons.cpp
-            src/icons.h
 
-            ../../src/wxJSON/jsonval.cpp
-            ../../src/wxJSON/jsonreader.cpp
-            ../../src/wxJSON/jsonwriter.cpp
+            src/wxJSON/jsonval.cpp
+            src/wxJSON/jsonreader.cpp
+            src/wxJSON/jsonwriter.cpp
 )
 ADD_LIBRARY(${PACKAGE_NAME} SHARED ${SRC_CLIMATOLOGY})
 
@@ -108,36 +50,6 @@ IF(NOT UNIX)
     INCLUDE_DIRECTORIES(${PLUGIN_SOURCE_DIR}/src/bzip2)
 ENDIF(NOT UNIX)
 
-IF(WIN32)
-  SET(OPENCPN_IMPORT_LIB "../../${CMAKE_CFG_INTDIR}/${PARENT}")
-  TARGET_LINK_LIBRARIES( ${PACKAGE_NAME} LIB_BZIP_CLIM ${OPENCPN_IMPORT_LIB} )
-  ADD_DEPENDENCIES(${PACKAGE_NAME} ${PARENT})
-ENDIF(WIN32)
-
-TARGET_LINK_LIBRARIES( ${PACKAGE_NAME} ${wxWidgets_LIBRARIES} )
-
-IF(APPLE)
-      INSTALL(TARGETS ${PACKAGE_NAME} BUNDLE LIBRARY DESTINATION ${CMAKE_BINARY_DIR}/OpenCPN.app/Contents/PlugIns)
-ENDIF(APPLE)
-
-IF(UNIX AND NOT APPLE)
-  FIND_PACKAGE(BZip2 REQUIRED)
-  INCLUDE_DIRECTORIES(${BZIP2_INCLUDE_DIR})
-  FIND_PACKAGE(ZLIB REQUIRED)
-  INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
-  TARGET_LINK_LIBRARIES( ${PACKAGE_NAME} ${BZIP2_LIBRARIES} ${ZLIB_LIBRARY} )
-  INSTALL(TARGETS ${PACKAGE_NAME} RUNTIME LIBRARY DESTINATION ${PREFIX_PLUGINS})
-ENDIF(UNIX AND NOT APPLE)
-
-IF(WIN32)
-  INSTALL(TARGETS ${PACKAGE_NAME} RUNTIME DESTINATION "plugins")
-ENDIF(WIN32)
- 	  	 
-IF(WIN32)
-  INSTALL(DIRECTORY data DESTINATION "plugins\\\\climatology")
-ELSE(WIN32)
-  INSTALL(DIRECTORY data DESTINATION ${PREFIX_PARENTDATA}/plugins/climatology)
-ENDIF(WIN32)
-
-INCLUDE("../PluginLocalization.cmake")
-PLUGIN_LOCALIZATION()
+INCLUDE("cmake/PluginInstall.cmake")
+INCLUDE("cmake/PluginLocalization.cmake")
+INCLUDE("cmake/PluginPackage.cmake")
