save cyclone day span, and link with json on win32 only

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,12 +25,16 @@ SET(SRC_CLIMATOLOGY
             src/zuFile.cpp
             src/IsoBarMap.cpp
             src/icons.cpp
+)
 
+IF(WIN32)
+SET(SRC_JSON
             src/wxJSON/jsonval.cpp
             src/wxJSON/jsonreader.cpp
-            src/wxJSON/jsonwriter.cpp
-)
-ADD_LIBRARY(${PACKAGE_NAME} SHARED ${SRC_CLIMATOLOGY})
+            src/wxJSON/jsonwriter.cpp)
+ENDIF(WIN32)
+
+ADD_LIBRARY(${PACKAGE_NAME} SHARED ${SRC_CLIMATOLOGY} ${SRC_JSON})
 
 IF(NOT UNIX)
     SET(SRC_BZIP
