fixes for wx-3.0

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,8 @@ SET(SRC_JSON
             src/wxJSON/jsonwriter.cpp)
 ENDIF(WIN32)
 
+ADD_DEFINITIONS(-DTIXML_USE_STL)
+
 ADD_LIBRARY(${PACKAGE_NAME} SHARED ${SRC_CLIMATOLOGY} ${SRC_JSON})
 
 IF(NOT UNIX)
