--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ INCLUDE( VERSION.cmake )
 SET(PLUGIN_VERSION "${PLUGIN_VERSION_MAJOR}.${PLUGIN_VERSION_MINOR}.${PLUGIN_VERSION_PATCH}" )
 
 SET(VERSION_MAJOR ${PLUGIN_VERSION_MAJOR})
-SET(VERSION_MINOR "${PLUGIN_VERSION_MINOR}${PLUGIN_VERSION_PATCH}")
+SET(VERSION_MINOR "${PLUGIN_VERSION_MINOR}")
 SET(VERSION_DATE ${PLUGIN_VERSION_DATE})
 
 INCLUDE("cmake/PluginConfigure.cmake")
