set bundle data to TRUE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ SET(VERBOSE_NAME Climatology)
 SET(TITLE_NAME CLIMATOLOGY)
 SET(CPACK_PACKAGE_CONTACT "Sean D'Epagnier ")
 
-SET(BUNDLE_DATA FALSE)
+SET(BUNDLE_DATA TRUE)
 
 INCLUDE( VERSION.cmake )
 SET(PLUGIN_VERSION "${PLUGIN_VERSION_MAJOR}.${PLUGIN_VERSION_MINOR}.${PLUGIN_VERSION_PATCH}" )
