improve numeric rendering in opengl supporting more drivers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ SET(SRC_CLIMATOLOGY
             src/ClimatologyConfigDialog.cpp
             src/zuFile.cpp
             src/IsoBarMap.cpp
+            src/TexFont.cpp
             src/icons.cpp
 )
 
