On windows use a private name for our bzip static library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,8 +40,9 @@ IF(NOT UNIX)
             src/bzip2/huffman.c 
             src/bzip2/randtable.c
     )
-    ADD_LIBRARY(LIB_BZIP STATIC ${SRC_BZIP})
-    TARGET_LINK_LIBRARIES( ${PACKAGE_NAME} LIB_BZIP )
+    ADD_LIBRARY(LIB_BZIP_CL STATIC ${SRC_BZIP})
+    TARGET_LINK_LIBRARIES( ${PACKAGE_NAME} LIB_BZIP_CL )
+
     INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/buildwin/include)
     INCLUDE_DIRECTORIES(${PLUGIN_SOURCE_DIR}/src/bzip2)
 ENDIF(NOT UNIX)
