Implement SVG icons for improved high resolution display support. Also fix macOS build and packaging.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,13 @@ SET(BUNDLE_DATA TRUE)
 INCLUDE( VERSION.cmake )
 SET(PLUGIN_VERSION "${PLUGIN_VERSION_MAJOR}.${PLUGIN_VERSION_MINOR}.${PLUGIN_VERSION_PATCH}" )
 
+OPTION(CLIMATOLOGY_USE_SVG "Use SVG graphics" ON)
+
 INCLUDE("cmake/PluginConfigure.cmake")
+
+IF(CLIMATOLOGY_USE_SVG)
+  ADD_DEFINITIONS(-DCLIMATOLOGY_USE_SVG)
+ENDIF(CLIMATOLOGY_USE_SVG)
 
 SET(SRC_CLIMATOLOGY
             src/ClimatologyOverlayFactory.cpp
