--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,13 +42,24 @@ IF(NOT UNIX)
     )
     ADD_LIBRARY(LIB_BZIP STATIC ${SRC_BZIP})
     TARGET_LINK_LIBRARIES( ${PACKAGE_NAME} LIB_BZIP )
-
-    INCLUDE_DIRECTORIES(${PLUGIN_SOURCE_DIR}/src/zlib-1.2.3)
+    INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/buildwin/include)
     INCLUDE_DIRECTORIES(${PLUGIN_SOURCE_DIR}/src/bzip2)
 ENDIF(NOT UNIX)
 
-IF(MINGW)
-    TARGET_LINK_LIBRARIES(${PACKAGE_NAME} "-lwxzlib-2.8")
+
+IF(WIN32)
+  IF(MSVC)
+    SET(OPENCPN_IMPORT_LIB "../../${CMAKE_CFG_INTDIR}/${PARENT}")
+ 	INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/buildwin/include)
+    TARGET_LINK_LIBRARIES(${PACKAGE_NAME} "${CMAKE_SOURCE_DIR}/buildwin/zlib1.lib")
+  ELSE()
+    TARGET_LINK_LIBRARIES(${PACKAGE_NAME} "-lz")
+  ENDIF()
+ENDIF(WIN32)
+
+
+ IF(MINGW)
+    TARGET_LINK_LIBRARIES( ${PACKAGE_NAME} "${CMAKE_SOURCE_DIR}/buildwin/zlib.lib")
 ENDIF(MINGW)
 
 INCLUDE("cmake/PluginJSON.cmake")
